2008-01-21  Mathias Hasselmann  <mathias@openismus.com>

	Avoid failed SOUP_IS_SERVER (server) assertions.

	* libepc/publisher.c: Call soup_server_remove_handler() only,
	when self->priv->server is set in epc_publisher_remove_handlers().

2008-01-21  Mathias Hasselmann  <mathias@openismus.com>

	Cleanup authentication handlers in epc_publisher_quit (#510435).

	* libepc/publisher.c: Call epc_publisher_remove_handlers() in
	epc_publisher_quit() to get rid of authentication handlers.

2008-01-21  Mathias Hasselmann  <mathias@openismus.com>

	* po/LINGUAS: Added ca

2008-01-21  Mathias Hasselmann  <mathias@openismus.com>

	Migrate from GNU gettext to intltool (#510465, Luca Ferretti).

	* autogen.sh: Invoke gnome-autogen.sh, instead of shipping a copy.
	* configure.ac, Makefile.am: Migrate from GNU gettext to intltool.
	* .gitignore, po/.gitignore: Update for intltool.
	* po/POTFILES.skip: Hide examples from intltool.
	* ABOUT-NLS, config.rpath, gtk-doc.make, m4/*, po/Makefile.in.in,
	po/Rules-quot, po/libepc.pot, po/*.header, po/*.sed, po/*.sin:
	Remove generated files from repository.

2008-01-21  Jorge González  <jorgegonz@svn.gnome.org>

	* po/es.po: Added Spanish translation.
	* po/LINGUAS: Added es

2008-01-19  Gil Forcada  <gforcada@gnome.org>

	* po/ca.po: Added Catalan translation.

2008-01-18  Mathias Hasselmann  <mathias@openismus.com>

	Announce proper libsoup API in libepc-1.0.pc (#509699).

	* configure.ac: Export LIBSOUP_API variable.
	* libepc-1.0.pc.in: Use LIBSOUP_API variable.

2008-01-18  Mathias Hasselmann  <mathias@openismus.com>

	Support libsoup 2.4, which will be part of GNOME 2.22 (#509699).
	Original patch by Dan Winship.

	* configure.ac: Also check for libsoup 2.4.
	Define HAVE_LIBSOUP22, when still building for libsoup 2.2.
	* libepc/consumer.c, libepc/publisher.c: Update for libsoup 2.4.
	* examples/simple-publisher.c: Print source code position in debug
	message to reduce confusion.
