@@ -1,0 +1,6 @@
+Update the top-level folder please.
+
+Well, or convince me that wildly spread ChangeLog files make any sense.
+Specially since ChangeLog files are redundant with the commit log already.
+
+Mathias
